@@ -190,7 +190,7 @@ class Photo(dict):
     def open(self, *args):
         url = self['page_url'] if 'page_url' in self else self['url']
         url = url.replace("'", "%27")
-        os.system("gnome-open '%s'" % url)
+        gtk.show_uri(None, url, gtk.gdk.CURRENT_TIME)
 
     def fav(self, new_rate):
         if self.get('fav'):
